--- a/requirements.txt
+++ b/requirements.txt
@@ -1,239 +1,72 @@
-ackermann-msgs==2.0.2
-action-msgs==2.0.3
-action-tutorials-interfaces==0.33.7
-action-tutorials-py==0.33.7
-actionlib-msgs==5.3.6
-ament-cmake-test==2.5.4
-ament-copyright==0.17.3
-ament-cppcheck==0.17.3
-ament-cpplint==0.17.3
-ament-flake8==0.17.3
-ament-index-python==1.8.1
-ament-lint==0.17.3
-ament-lint-cmake==0.17.3
-ament-package==0.16.4
-ament-pep257==0.17.3
-ament-uncrustify==0.17.3
-ament-xmllint==0.17.3
-angles==1.16.1
-anyio==4.12.1
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.4.0
+annotated-types==0.7.0
 asttokens==3.0.1
-async-lru==2.0.5
-attrs==25.4.0
-babel==2.17.0
-beautifulsoup4==4.14.3
-bleach==6.3.0
-builtin-interfaces==2.0.3
+blis==1.3.3
+catalogue==2.0.10
 certifi==2026.1.4
-cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
+cloudpathlib==0.23.0
 comm==0.2.3
-composition-interfaces==2.0.3
-control-msgs==5.5.0
-controller-manager==4.39.2
-controller-manager-msgs==4.39.2
-cv-bridge==4.1.0
-debugpy==1.8.19
+confection==0.1.5
+contourpy==1.3.3
+cycler==0.12.1
+cymem==2.0.13
+debugpy==1.8.20
 decorator==5.2.1
-defusedxml==0.7.1
-demo-nodes-py==0.33.7
-diagnostic-msgs==5.3.6
-diagnostic-updater==4.2.6
-domain-coordinator==0.12.0
-example-interfaces==0.12.0
-examples-rclpy-executors==0.19.7
-examples-rclpy-minimal-action-client==0.19.7
-examples-rclpy-minimal-action-server==0.19.7
-examples-rclpy-minimal-client==0.19.7
-examples-rclpy-minimal-publisher==0.19.7
-examples-rclpy-minimal-service==0.19.7
-examples-rclpy-minimal-subscriber==0.19.7
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 executing==2.2.1
-fastjsonschema==2.21.2
-fqdn==1.5.1
-generate-parameter-library-py==0.5.0
-geometry-msgs==5.3.6
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
+fonttools==4.61.1
 idna==3.11
-image-geometry==4.1.0
-interactive-markers==2.5.5
 ipykernel==7.1.0
 ipython==9.9.0
 ipython_pygments_lexers==1.1.1
-isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
-json5==0.13.0
-jsonpointer==3.0.0
-jsonschema==4.26.0
-jsonschema-specifications==2025.9.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
 jupyter_client==8.8.0
 jupyter_core==5.9.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.4
-jupyterlab==4.5.2
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.28.0
-lark==1.3.1
-laser-geometry==2.7.2
-launch==3.4.9
-launch-ros==0.26.10
-launch-testing==3.4.9
-launch-testing-ros==0.26.10
-launch-xml==3.4.9
-launch-yaml==3.4.9
-lifecycle-msgs==2.0.3
-logging-demo==0.33.7
-map-msgs==2.4.1
+kiwisolver==1.4.9
 MarkupSafe==3.0.3
+matplotlib==3.10.8
 matplotlib-inline==0.2.1
-message-filters==4.11.9
-mistune==3.2.0
-nav-msgs==5.3.6
-nbclient==0.10.4
-nbconvert==7.16.6
-nbformat==5.10.4
+murmurhash==1.0.15
 nest-asyncio==1.6.0
-notebook_shim==0.2.4
-numpy==2.4.1
-osrf-pycommon==2.1.7
-packaging==25.0
-pal-statistics==2.7.0
-pal-statistics-msgs==2.7.0
-pandocfilters==1.5.1
+numpy==2.4.2
+packaging==26.0
 parso==0.8.5
-pcl-msgs==1.0.0
-pendulum-msgs==0.33.7
 pexpect==4.9.0
+pillow==12.1.0
 platformdirs==4.5.1
-prometheus_client==0.24.1
+preshed==3.0.12
 prompt_toolkit==3.0.52
-psutil==7.2.1
+psutil==7.2.2
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
 Pygments==2.19.2
+pyparsing==3.3.2
 python-dateutil==2.9.0.post0
-python-json-logger==4.0.0
-python-qt-binding==2.2.2
-PyYAML==6.0.3
 pyzmq==27.1.0
-qt-dotgraph==2.7.5
-qt-gui==2.7.5
-qt-gui-cpp==2.7.5
-qt-gui-py-common==2.7.5
-quality-of-service-demo-py==0.33.7
-rcl-interfaces==2.0.3
-rclpy==7.1.6
-rcutils==6.7.4
-referencing==0.37.0
+regex==2026.1.15
 requests==2.32.5
-resource-retriever==3.4.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rmw-dds-common==3.1.0
-ros2action==0.32.6
-ros2bag==0.26.9
-ros2bag-mcap-cli==0.26.9
-ros2bag-sqlite3-cli==0.26.9
-ros2cli==0.32.6
-ros2component==0.32.6
-ros2controlcli==4.39.2
-ros2doctor==0.32.6
-ros2interface==0.32.6
-ros2launch==0.26.10
-ros2lifecycle==0.32.6
-ros2multicast==0.32.6
-ros2node==0.32.6
-ros2param==0.32.6
-ros2pkg==0.32.6
-ros2run==0.32.6
-ros2service==0.32.6
-ros2topic==0.32.6
-rosbag2-interfaces==0.26.9
-rosbag2-py==0.26.9
-rosgraph-msgs==2.0.3
-rosidl-adapter==4.6.6
-rosidl-cli==4.6.6
-rosidl-cmake==4.6.6
-rosidl-generator-c==4.6.6
-rosidl-generator-cpp==4.6.6
-rosidl-generator-py==0.22.2
-rosidl-generator-type-description==4.6.6
-rosidl-parser==4.6.6
-rosidl-pycommon==4.6.6
-rosidl-runtime-py==0.13.1
-rosidl-typesupport-c==3.2.2
-rosidl-typesupport-cpp==3.2.2
-rosidl-typesupport-fastrtps-c==3.6.2
-rosidl-typesupport-fastrtps-cpp==3.6.2
-rosidl-typesupport-introspection-c==4.6.6
-rosidl-typesupport-introspection-cpp==4.6.6
-rpds-py==0.30.0
-rpyutils==0.4.2
-rqt-action==2.2.0
-rqt-bag==1.5.5
-rqt-bag-plugins==1.5.5
-rqt-console==2.2.1
-rqt-graph==1.5.5
-rqt-gui==1.6.2
-rqt-gui-py==1.6.2
-rqt-msg==1.5.1
-rqt-plot==1.4.4
-rqt-publisher==1.7.2
-rqt-py-common==1.6.2
-rqt-py-console==1.2.3
-rqt-reconfigure==1.6.2
-rqt-service-caller==1.2.1
-rqt-shell==1.2.2
-rqt-srv==1.2.2
-rqt-topic==1.7.4
-Send2Trash==2.1.0
-sensor-msgs==5.3.6
-sensor-msgs-py==5.3.6
-service-msgs==2.0.3
-setuptools==80.9.0
-shape-msgs==5.3.6
+setuptools==80.10.2
 six==1.17.0
-soupsieve==2.8.1
-sros2==0.13.4
+smart_open==7.5.0
+spacy==3.8.11
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.2
 stack-data==0.6.3
-statistics-msgs==2.0.3
-std-msgs==5.3.6
-std-srvs==5.3.6
-stereo-msgs==5.3.6
-teleop-twist-keyboard==2.4.1
-terminado==0.18.1
-tf2-geometry-msgs==0.36.16
-tf2-kdl==0.36.16
-tf2-msgs==0.36.16
-tf2-py==0.36.16
-tf2-ros-py==0.36.16
-tf2-sensor-msgs==0.36.16
-tf2-tools==0.36.16
-tinycss2==1.4.0
-topic-monitor==0.33.7
+thinc==8.3.10
+tiktoken==0.12.0
 tornado==6.5.4
+tqdm==4.67.2
 traitlets==5.14.3
-trajectory-msgs==5.3.6
-turtlesim==1.8.3
-type-description-interfaces==2.0.3
+typer-slim==0.21.1
+typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.3
-unique-identifier-msgs==2.5.0
-uri-template==1.3.0
 urllib3==2.6.3
-visualization-msgs==5.3.6
-wcwidth==0.2.14
-webcolors==25.10.0
-webencodings==0.5.1
-websocket-client==1.9.0
-xacro==2.1.1
+wasabi==1.1.3
+wcwidth==0.5.3
+weasel==0.4.3
+wrapt==2.1.0
