--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.3
 json5==0.13.0
 jsonpointer==3.0.0
 jsonschema==4.26.0
@@ -93,6 +94,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.30.0
+scikit-learn==1.8.0
+scipy==1.17.0
 Send2Trash==2.1.0
 setuptools==80.10.2
 six==1.17.0
@@ -105,6 +108,7 @@ srsly==2.5.2
 stack-data==0.6.3
 terminado==0.18.1
 thinc==8.3.10
+threadpoolctl==3.6.0
 tiktoken==0.12.0
 tinycss2==1.4.0
 tornado==6.5.4
