--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ executing==2.2.1
 fastjsonschema==2.21.2
 fonttools==4.61.1
 fqdn==1.5.1
+gensim==4.4.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -67,11 +68,14 @@ nest-asyncio==1.6.0
 notebook_shim==0.2.4
 numpy==2.4.2
 packaging==26.0
+pandoc==2.4
 pandocfilters==1.5.1
 parso==0.8.5
 pexpect==4.9.0
 pillow==12.1.0
 platformdirs==4.5.1
+plumbum==1.10.0
+ply==3.11
 preshed==3.0.12
 prometheus_client==0.24.1
 prompt_toolkit==3.0.52
